--- a/index.html
+++ b/index.html
@@ -1,22 +1,55 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My p5.js Page</title>
     <script src="./p5.min.js"></script>
+    <style>
+        body {
+            margin: 0;
+            padding: 0;
+            overflow: hidden;
+            height: 100%;
+        }
+    </style>
 </head>
+
 <body>
     <script>
-        // Your p5.js code goes here
-        function setup() {
-            createCanvas(400, 400);
-            background(220);
+        let earth, space;
+
+        function preload() {
+            earth = loadImage('./earth1.png');
+            space = loadImage('./sky.png');
         }
 
+        // Your p5.js code goes here
+        function setup() {
+            createCanvas(windowWidth, windowHeight);
+        }
+
+        const startEarthHeight = 400;
+        const w = startEarthHeight;
+        const steps = 7 + 1;
+        let stepIndex = 0;
+        let h = startEarthHeight;
+        let targetH = h;
+
         function draw() {
-            // Your drawing code goes here
+            background(0);
+            image(space, (width - w) / 2, (height - w) / 2, w, w);
+
+            image(earth, (width - w) / 2, (height - h) / 2, w, h);
+
+            h = lerp(h, targetH, 0.1);
+        }
+
+        function mousePressed() {
+            targetH -= (startEarthHeight / steps);
         }
     </script>
 </body>
+
 </html>
