Hammer changed to stop at 6 stops and be proportionate to earth. Sky with stars edited from my p5 sketch

--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
         function preload() {
             earth = loadImage('./earth1.png');
             space = loadImage('./sky.png');
+            hammer = loadImage('./hammer.png');
         }
 
         // Your p5.js code goes here
