--- a/index.html
+++ b/index.html
@@ -12,19 +12,15 @@
         <h2><em>Written by the Winners</em></h2>
     </header>
     <main>
-        <div class="click-to-play">Click 2 Play</div>
-        <div class="buttons">
-            <button id="astronomy">Astronomy</button>
-            <button id="world-history">World History</button>
-        </div>
+        <button id="astronomy">Astronomy</button>
+        <button id="world-history">World History</button>
     </main>
-    <script>
-        document.getElementById('astronomy').addEventListener('click', function() {
-            window.location.href = 'earth.html';
-        });
-        document.getElementById('world-history').addEventListener('click', function() {
-            window.location.href = 'g7.html';
-        });
-    </script>
+    <footer>
+        <p>Orwell Publishing House</p> 
+          <p> 1984 Edition</p>
+    </footer>
+    <script src="script.js"></script>
+</body>
+</html>
 </body>
 </html>
