--- a/g7.html
+++ b/g7.html
@@ -7,68 +7,20 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <header>
+        <h1>Plz drag 2 delete</h1>
+    </header>
     <main id="container">
-        <img src="1.svg" id="svg1" alt="SVG 1">
-        <img src="merkel.png" id="merkel" alt="Merkel" draggable="false">
-        <img src="trash-icon.jpeg" id="trash-icon" alt="Trash Icon">
+        <img src="1.svg" draggable="false" id="svg1" alt="SVG 1" style="position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%);">
+        <img src="Merkel.png" id="merkel" alt="Merkel" draggable="false" style="position: absolute; top: 56%; left: 43%; transform: translate(-50%, -50%);">
+        <!-- <img src="Trash-icon.jpg" id="trash-icon" alt="Trash Icon" style="position: absolute; bottom: 10px; right: 10px;"> -->
+
+
     </main>
     <footer>
         <button id="table-of-contents" onclick="location.href='index.html';">Table of Contents</button>
     </footer>
     <script src="script.js"></script>
-    <script>
-        document.addEventListener('DOMContentLoaded', function () {
-            const merkel = document.getElementById('merkel');
-            const trashIcon = document.getElementById('trash-icon');
-            let isDragging = false;
 
-            merkel.addEventListener('mousedown', function (e) {
-                isDragging = true;
-                e.preventDefault(); // Prevent default drag behavior
-            });
-
-            document.addEventListener('mousemove', function (e) {
-                if (isDragging) {
-                    merkel.style.left = e.pageX - merkel.width / 2 + 'px';
-                    merkel.style.top = e.pageY - merkel.height / 2 + 'px';
-                    checkOverlap();
-                }
-            });
-
-            document.addEventListener('mouseup', function (e) {
-                isDragging = false;
-            });
-
-            function checkOverlap() {
-                const merkelRect = merkel.getBoundingClientRect();
-                const trashRect = trashIcon.getBoundingClientRect();
-
-                if (!(merkelRect.right < trashRect.left ||
-                      merkelRect.left > trashRect.right ||
-                      merkelRect.bottom < trashRect.top ||
-                      merkelRect.top > trashRect.bottom)) {
-                    if (calculateOverlap(merkelRect, trashRect) >= 10) {
-                        // Replace with 2.svg
-                        document.getElementById('svg1').src = '2.svg';
-                        merkel.style.display = 'none';
-                        trashIcon.style.display = 'none';
-                        // Wait for 1 minute, then redirect to win.html
-                        setTimeout(function() {
-                            window.location.href = 'win.html';
-                        }, 60000); // 60000 milliseconds = 1 minute
-                    }
-                }
-            }
-
-            function calculateOverlap(rect1, rect2) {
-                const x_overlap = Math.max(0, Math.min(rect1.right, rect2.right) - Math.max(rect1.left, rect2.left));
-                const y_overlap = Math.max(0, Math.min(rect1.bottom, rect2.bottom) - Math.max(rect1.top, rect2.top));
-                const overlapArea = x_overlap * y_overlap;
-
-                const rect1Area = (rect1.right - rect1.left) * (rect1.bottom - rect1.top);
-                return (overlapArea / rect1Area) * 100;
-            }
-        });
-    </script>
 </body>
 </html>
