--- a/win.html
+++ b/win.html
@@ -8,4 +8,11 @@
 </head>
 <body>
     <main id="container">
-        <img src="hist.png" id="hist" alt="History Image" style="
+        <img src="hist.png" id="hist" alt="History Image" > 
+
+        </main>
+
+        <footer>
+            <button id="table-of-contents" onclick="location.href='index.html';">Table of Contents</button>
+        </footer>
+</body>
